# PyDmDeep

./: .flake8  .gitignore  README.md  pyproject.toml  run_exp.py
exp/: config.py  dmd.py  dmd_step.py  lstm_train.py  tensor_data.py
exp/post/: methods.py  orig.py  test_errors.py
pydmdeep/: data.py  types.py
pydmdeep/models/: lstm.py  networks.py
pydmdeep/post/: __init__.py  proposal_figures.py  utils.py
